# Kabi

./: .gitignore  CMakeLists.txt  GameMsg.proto  README.md  kabi.xml  kabi_client.xml  message.pb.cc  message.pb.h  message.proto  order.proto  test_client.cpp  test_eventloop.cpp  test_log.cpp  test_rpc_client.cpp  test_rpc_server.cpp  test_tcp.cpp
conf/: kabi.xml  kabi_client.xml
generator/: kabi_generator.py
generator/template/: CmakeLists.txt.template  main.cc.template
include/: config.h  error_code.h  log.h  msg_util.h  mutex.h  runtime.h  util.h
kabi/common/: log.cpp  log.h  mutex.h  util.cpp  util.h
kabisrc/common/: CMakeLists.txt  config.h  log.cpp  log.h  mutex.h  util.cpp
kabisrc/game/: AOI.cpp  AOI.h  game_role.cpp  game_role.h  msg_api.cpp  msg_api.h
kabisrc/include/: config.h  error_code.h  log.cpp  log.h  msg_util.cpp  msg_util.h  mutex.h  runtime.h  util.h
kabisrc/net/: eventloop.h  fd_event.h  fd_event_group.cpp  fd_event_group.h  io_thread.h  io_thread_group.cpp  io_thread_group.h  timer.cpp  timer.h  timer_event.h  wakeup_fd_event.h
kabisrc/net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.h  tinypb_protocol.cpp  tinypb_protocol.h
kabisrc/net/game/: AOI.cpp  AOI.h  GameMsg.pb.cc  GameMsg.pb.h  game_msg.cpp  game_msg.h  game_role.cpp  game_role.h  msg_api.h
kabisrc/net/rpc/: rpc_channel.cpp  rpc_channel.h  rpc_closure.h  rpc_controller.cpp  rpc_controller.h  rpc_dispatcher.cpp  rpc_dispatcher.h
kabisrc/net/tcp/: net_addr.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_client.cpp  tcp_client.h  tcp_connection.h  tcp_server.cpp  tcp_server.h  tcpbuffer.h
net/: abstract_coder.h  abstract_protocol.h  eventloop.cpp  eventloop.h  fd_event.cpp  fd_event.h  fd_event_group.h  io_thread.cpp  io_thread_group.cpp  io_thread_group.h  string_coder.h  timer.cpp  timer.h  timer_event.cpp  timer_event.h  wakeup_fd_event.cpp
net/coder/: abstract_protocol.h  string_coder.h  tinypb_coder.cpp  tinypb_coder.h  tinypb_protocol.h
net/rpc/: rpc_channal.cpp  rpc_channel.cpp  rpc_channel.h  rpc_closure.h  rpc_controller.cpp  rpc_controller.h  rpc_dispatcher.cpp  rpc_dispatcher.h
net/tcp/: net_addr.cpp  net_addr.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  tcpbuffer.cpp  tcpbuffer.h
src/: config.cpp  log.cpp  runtime.cpp  util.cpp
testcases/: GameMsg.pb.cc  GameMsg.pb.h  test_AOI.cpp  test_game_client.cpp  test_game_server.cpp  test_log.cpp  test_proto_Msg_option.cpp  test_rpc_client.cpp  test_rpc_server.cpp  test_tcp.cpp
